feat: realize main auth logic
Implement repository layer
Implement dto layer
Implement service layer